# sfml_game

./: CMakeLists.txt  README.md  config.txt
include/: app.h  file.h
src/: app.cpp  main.cpp
